fix for background issue not showing in Journal Issue

--- a/styles/apria-old.css
+++ b/styles/apria-old.css
@@ -1401,7 +1401,7 @@ figcaption {
     overflow: hidden;
     position: fixed;
     height: 100vh;
-    width: calc((100% - 1024px) / 2 + 680px)
+    width: 100%;
 }
 
 .article__background {
